# wwwin32

./: Cargo.toml
doc/: misc-notes.md
exe/ops-r/: Cargo.toml
exe/ops-r/src/: main.rs
win32/src/winapi/: builtin.rs
