[package]
name = "ops"
version = "0.1.0"
edition = "2021"

[dependencies]
# [dependencies.compiler_builtins]
# version = "0.1.106"
# features = ["c"]
# default-features = false

[dependencies.windows-sys]
version = "0.52.0"
features = [
  "Win32_Foundation",
  "Win32_System",
  "Win32_System_Console",
  "Win32_System_IO",
  "Win32_Storage",
  "Win32_Storage_FileSystem",
  "Win32_UI",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
]
